# statistics-calculator

./: .breakpoints  .replit  README.md  mean_var_std.py  pyproject.toml
.cache/pypoetry/artifacts/a0/be/f1/95bace7bc354bb763a0ceb42c8ddcbc5d2682b9b0a58b846c31d36a862/: Cython-3.0.7-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
.upm/: store.json
